fix: added auth to teams endpoints